! Fixed misalignment of admin panel items; they're supposed to be vertically aligned consistently (i.e. to top) (admenu.css) ! Some more of the icons for the main ACP, yet more courtesy of Crystal Project (Admin.php, *.png)

--- a/Themes/default/skins/admenu.css
+++ b/Themes/default/skins/admenu.css
@@ -2,7 +2,6 @@
 .inline-block
 	display: inline-block
 	mixin: ie-inline-block
-	vertical-align: middle
 
 // IE6 needs layout to show inline-block divs... And a default right margin from my experience.
 mixin {ie6,ie7} ie-inline-block
